--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,7 @@
     <div><h3>Globomatics Registration Form</h3></div>
     <div *ngIf="validMessage != ''">
         <h3 class="has-info">{{validMessage}}</h3>
+        
     </div>
     <form class="bikeform" [formGroup]="bikeform" (ngSubmit)="submitRegistration()" novalidate>
         <div class="input__fields">
@@ -25,7 +26,7 @@
         </div>
     </form>
 </div>
-
+<p-toast></p-toast>
 <!-- <div class="container">
     <form [formGroup]="bikeform" (ngSubmit)="submitRegistration()" novalidate>
       <div *ngIf="validMessage != ''">
