Docker-compose file created

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <div><h3>Globomatics Registration Form</h3></div>
+    <div><h3>Globomatics Registration Form using Docker Compose</h3></div>
     <div *ngIf="validMessage != ''">
         <h3 class="has-info">{{validMessage}}</h3>
         
