Docker-compose now implemented.  I had to change the bike service.  Add default config, remove proxy for corss origin.  Now the api-app in controller takes care of that.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="header__text">Global Bike  System</h1>
+  <h1 class="header__text">Global Bike </h1>
 </div>
 
 <router-outlet></router-outlet>
